Fix non-icon tech skill skewing higher alignment then sibling icons

--- a/portfolio/src/components/project/project.scss
+++ b/portfolio/src/components/project/project.scss
@@ -75,3 +75,9 @@
 .purpleIcon {
     color:purple;
 }
+
+.materialize-text-style {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
